--- a/style.css
+++ b/style.css
@@ -1,36 +1,52 @@
 body {
     font-family: sans-serif;
+    background-color: #0e1d5eff;
+}
+
+p {
+    font-size: 30px;
+    color: darkblue;
+}
+
+header {
+    background-color: white;
+    padding: 10px;
+}
+
+header img {
+    height: 50px;
+    width: 750px;
 }
 
 h1 {
     text-align: center;
+    color: white;
     font-size: 60px;
 }
 
-h2{
-    font-size: 40px;
-    background-color: peru;
+main p {
+    padding: 50px;
+    background-color: white;
+    border-radius: 30px;
+    margin: 20px;
 }
 
-a {
-    color: black;
-    font-size: 20px;
+main img {
+    height: 200px;
+    width: 700px;
 }
 
-p, img {
-    border: 3px solid peru;
+footer {
+    padding: 30px;
 }
 
-p, table {
-    font-size: 20px;
+.icons {
+    height: 50px;
+    width: 50px;
 }
 
-table{
-    background-color: lightyellow;
-    text-align: center;
-    border-collapse: collapse;
-}
-
-td{
-    border: 1px solid brown;
+.marker {
+    height: 20px;
+    width: 20px;
+    margin: 10px;
 }
